# crosshair

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  agents-guide.md  bullseye.yaml
.github/workflows/: ci.yml  release.yml
docs/audit/: fable-2026-07.md
src/: cli.rs  lib.rs  loader.rs  main.rs  runner.rs  schema.rs  status.rs  store.rs  tick.rs
